[aliases]
test=pytest

[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,.hg,.svn,test,setup.py,__pycache__
ignore = B006

[isort]
profile=black
src_paths=['app', 'tests/units', 'lambda']
float_to_top=true
known_first_party=app
known_gumgum=konnector
sections=FUTURE,STDLIB,THIRDPARTY,GUMGUM,FIRSTPARTY,LOCALFOLDER
